--- a/config.yaml
+++ b/config.yaml
@@ -24,16 +24,16 @@ monitors:
     followRedirect: false # should fetch follow redirects, default=false
     linkable: false # allows the title to be a link, default=true
 
-  - id: www-cloudflare-com
-    name: www.cloudflare.com
+  - id: www-codig-ec
+    name: www.codig.ec
     description: 'Built for anything connected to the Internet.'
-    url: 'https://www.cloudflare.com'
+    url: 'https://www.codig.ec'
     method: GET
     expectStatus: 200
     linkable: true # allows the title to be a link, default=true
 
-  - id: blog-cloudflare-com
+  - id: terminos-codig-ec
     name: The Cloudflare Blog
-    url: 'https://blog.cloudflare.com/'
+    url: 'https://terminos.codig.ec/'
     method: GET
     expectStatus: 200
