--- a/config.yaml
+++ b/config.yaml
@@ -15,19 +15,11 @@ settings:
   dayInHistogramNotOperational: ' incident(s)' # xx incident(s) recorded
 
 monitors:
-  - id: workers-cloudflare-com # unique identifier
-    name: workers.cloudflare.com
-    description: 'You write code. They handle the rest.' # default=empty
-    url: 'https://workers.cloudflare.com/' # URL to fetch
-    method: GET # default=GET
-    expectStatus: 200 # operational status, default=200
-    followRedirect: false # should fetch follow redirects, default=false
-    linkable: false # allows the title to be a link, default=true
 
   - id: www-codig-ec
     name: www.codig.ec
     description: 'Built for anything connected to the Internet.'
-    url: 'https://www.codig.ec'
+    url: 'https://codig.ec'
     method: GET
     expectStatus: 200
     linkable: true # allows the title to be a link, default=true
