--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 settings:
   title: 'Status Page'
-  url: 'https://status-page.eidam.dev' # used for Slack messages
+  url: 'https://status.codig.ec' # used for Slack messages
   logo: logo-192x192.png # image in ./public/ folder
   daysInHistogram: 90 # number of days you want to display in histogram
   collectResponseTimes: true # collects avg response times from CRON locations
@@ -25,7 +25,8 @@ monitors:
     linkable: true # allows the title to be a link, default=true
 
   - id: terminos-codig-ec
-    name: The Cloudflare Blog
-    url: 'https://terminos.codig.ec/'
+    name: terminos.codig.ec
+    url: 'https://terminos.codig.ec'
     method: GET
     expectStatus: 200
+    linkable: true # allows the title to be a link, default=true
