--- a/wrangler.toml
+++ b/wrangler.toml
@@ -13,7 +13,7 @@ bucket = "out"
 entry-point = "./"
 
 # uncomment and adjust following if you are not using GitHub Actions
-#[env.production]
+[env.production]
 #kv-namespaces = [{binding="KV_STATUS_PAGE", id="xxxx", preview_id=""}]
 zone_id="codig.ec"
 route="status.codig.ec"
