--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "cf-workers-status-page"
+name = "codig-status-page"
 workers_dev = true
 account_id = ""
 type = "webpack"
@@ -13,7 +13,7 @@ bucket = "out"
 entry-point = "./"
 
 # uncomment and adjust following if you are not using GitHub Actions
-[env.production]
+#[env.production]
 #kv-namespaces = [{binding="KV_STATUS_PAGE", id="xxxx", preview_id=""}]
-zone_id="codig.ec"
-route="status.codig.ec"
+#zone_id="codig.ec"
+#route="status.codig.ec"
